--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,7 @@
   "icons": [
     {
       "src": "assets/images/logo/weedgame.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "assets/images/logo/weedgame.png",
-      "sizes": "512x512",
+      "sizes": "any",
       "type": "image/png",
       "purpose": "any maskable"
     }
